2003-01-22  Jacob Perkins <jap1@users.sourceforge.net>

	* Patches from bug #104166

2003-01-19  Jacob Perkins <jap1@users.sourceforge.net>

	* seahorse-recipients: Fixed bug by removing delete_event
	* seahorse-widget: Added assert for glade xml

2003-01-18  Jacob Perkins <jap1@users.sourceforge.net>

	* seahorse-context: Bug fix in ::new

2003-01-17  Jacob Perkins <jap1@users.sourceforge.net>

	* seahorse-widget:
	* seahorse-key-manager:
	Display help contents
	* seahorse-text-editor:
	Changed 'Clear Sign' to 'Clear Text Sign'
	* added .cvsignore to all dirs

2003-01-16  Jacob Perkins <jap1@users.sourceforge.net>

	* seahorse-text-editor:
	* seahorse-file-manager:
	String cleanups

2003-01-15  Jacob Perkins <jap1@users.sourceforge.net>

	* ChangeLog:
	* NEWS:
	* README:
	* README.cvs:
	* THANKS:
	* TODO:
	Updated docs to be more standards compliant, added more info,
	updated version
	* seahorse-key-manager-store: bug fix so don't list primary key twice
	* Makefile.am:
	* seahorse.spec.in:
	Removed MAINTAINERS

2003-01-15  Jean Schurger <yshark@schurger.org>
	* Makefine.am: Add MAINTAINERS
	* seahorse.spec.in: Merge my original spec file with the
	Yanko Kaneti one (see %changelog) 

2003-01-13  Jacob Perkins <jap1@users.sourceforge.net>

	* Removed unecessary translation macros

2003-01-10  Jacob Perkins <jap1@users.sourceforge.net>
	
	* seahorse-key-widget: Added hash table ensure only one dialog of each
	type per key
	* seahorse-key-properties:
	* seahorse-export:
	modified to check if already have dialog
	* seahorse-context: Changed to GtkObject for destroy signal,
	re-added ::destroy
	* seahorse-widget: added ::new_allow_multiple for signatures,
	listens to context destroy signal
	* seahorse-signatures: now a widget using
	seahorse-widget::new_allow_multiple; no longer can show key properties,
	shows uid & keyid of signer
	* seahorse-key-manager-store: Changed 'Algorithm' to 'Type'

2003-01-09  Jacob Perkins <jap1@users.sourceforge.net>
	