@@ -1,6 +1,14 @@
 Please ask a maintainer before committing.
+If you are a maintainer and want to receive bug reports,
+add a line to MAINTAINERS.
 
-Branches:
-	HEAD: stable, should always build fine
-	DEVELOPMENT: unstable, expiremental, testing,
-		only used when inappropriate for HEAD
+Current Branches:
+	HEAD: development, possibly unstable
+	seahorse-0-6: stable branch for 0.6.x
+
+Release Tags:
+	Release versions are tagged: Release-MAJOR_MINOR_MICRO
+	in the branch seahorse-MAJOR-MINOR
+
+Deprecated Branches:
+	DEVELOPMENT, seahorse-0_6_1
