@@ -5,11 +5,13 @@ Contributors:
 	
 	Jean Schurger for rpms and the new icon
 	
-	Erich Schubert for testing, bug fixes, and german translation
+	Erich Schubert for testing, bug fixes, 
+	and initial german translation
 	
 	Yanko Kaneti for bug fixes and a spec file
 	
-	Gnome translation & doc teams
+	Gnome translation & doc teams, especially Jordi Mallach
+	for package help
 	
 Original seahorse(1) authors:
 	
