@@ -68,7 +68,7 @@ Also check bugzilla for other tasks.
 [ ] Icons for text editor popup
 [ ] Don't list disabled or non-capable keys for encryption recipients
 
-0.8.0 (Focus: Gnome integration & usability)
+0.9.0 (Focus: Gnome integration & usability)
 --------------------------------------------
 
 [ ] Key sorting (Resp: Jacob)
