@@ -1,5 +1,11 @@
 2003-01-22  Jacob Perkins <jap1@users.sourceforge.net>
 
+	* configure.in:
+	* src/Makefile.am:
+	Package updates from Jose
+
+2003-01-22  Jacob Perkins <jap1@users.sourceforge.net>
+
 	* Patches from bug #104166
 
 2003-01-19  Jacob Perkins <jap1@users.sourceforge.net>
